--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
@@ -55,7 +55,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Matricular Alumno" action="#{gestionMatriculaController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Registrar Alumno" action="#{gestionMatriculaController.setIndexMenu(1)}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionMatriculaController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
