--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAlumnos.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpAlumnos.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-10-02T09:56:54 -->
+<!-- 2015-10-02T21:39:58 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -282,7 +282,7 @@ Reporte de Alumnos]]></text>
 				<reportElement stretchType="RelativeToBandHeight" x="75" y="6" width="174" height="20" uuid="e38dca93-10bd-4fdc-b560-3298c47386c9"/>
 				<textFieldExpression><![CDATA["Total de Alumnos: "+ $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="27" y="0" width="687" height="30" uuid="670592f7-7402-4c1a-af8b-7ee2e28e591d"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
