correcion de reporte

--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpMatriculas.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpMatriculas.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2015-10-02T21:43:13 -->
+<!-- 2015-10-03T08:26:12 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -22,14 +22,27 @@
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="73" splitType="Stretch">
+	<pageHeader>
+		<band height="80">
 			<image>
-				<reportElement x="5" y="4" width="105" height="46" uuid="56a242b3-3fe0-495d-a1ff-15dac00741ca"/>
+				<reportElement x="9" y="3" width="105" height="46" uuid="56a242b3-3fe0-495d-a1ff-15dac00741ca"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
 			</image>
+			<textField evaluationTime="Report">
+				<reportElement x="386" y="52" width="164" height="20" uuid="75bb6e7c-fc1a-40d3-ae69-4b44302311ec"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="290" y="44" width="100" height="20" uuid="1acd74be-764d-4aaa-9e03-4c0653b925bc"/>
+				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="530" y="9" width="32" height="30" uuid="a31928d4-a260-4953-8203-a4f167c77f7d"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
 			<staticText>
-				<reportElement x="180" y="1" width="205" height="29" uuid="894a9733-bd60-4b93-8246-4864a9626db4"/>
+				<reportElement x="184" y="0" width="205" height="29" uuid="894a9733-bd60-4b93-8246-4864a9626db4"/>
 				<textElement textAlignment="Center">
 					<font size="11" isBold="true"/>
 				</textElement>
@@ -37,37 +50,24 @@
 Reporte de Alumnos]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="386" y="10" width="136" height="30" uuid="9cc0c67c-e099-405f-9d11-0ee7097fb59e"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement x="526" y="10" width="32" height="30" uuid="a31928d4-a260-4953-8203-a4f167c77f7d"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement x="382" y="53" width="164" height="20" uuid="75bb6e7c-fc1a-40d3-ae69-4b44302311ec"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["F. Generación:"+ $P{fechaGeneracion}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="112" y="45" width="40" height="20" uuid="58a26b07-579f-4b93-9d06-6077ebd92902"/>
-				<text><![CDATA[Desde:]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="152" y="45" width="100" height="20" uuid="8c6f13b1-69f5-4f14-bfab-759ca1cde8e5"/>
+				<reportElement x="156" y="44" width="100" height="20" uuid="8c6f13b1-69f5-4f14-bfab-759ca1cde8e5"/>
 				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="252" y="45" width="34" height="20" uuid="38774c72-8fa3-4c97-b03c-ae2a9d8b21f7"/>
-				<text><![CDATA[Hasta:]]></text>
+				<reportElement x="116" y="44" width="40" height="20" uuid="58a26b07-579f-4b93-9d06-6077ebd92902"/>
+				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="286" y="45" width="100" height="20" uuid="1acd74be-764d-4aaa-9e03-4c0653b925bc"/>
-				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
+				<reportElement x="390" y="9" width="136" height="30" uuid="9cc0c67c-e099-405f-9d11-0ee7097fb59e"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de "]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="256" y="44" width="34" height="20" uuid="38774c72-8fa3-4c97-b03c-ae2a9d8b21f7"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
 		</band>
-	</title>
+	</pageHeader>
 	<columnHeader>
 		<band height="32" splitType="Stretch">
 			<staticText>
