--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
@@ -31,14 +31,14 @@
                         </p:selectOneMenu>
                         <p:outputLabel value="Estado:"></p:outputLabel>
                         <p:selectOneMenu id="estadoU" value="#{rptUsuariosController.estadoUser}">
-                            <f:selectItem itemValue="T" itemLabel="TODOS"></f:selectItem>
-                            <f:selectItem itemValue="A" itemLabel="ACTIVO"></f:selectItem>
-                            <f:selectItem itemValue="I" itemLabel="INACTIVO"></f:selectItem>
+                            <f:selectItem itemValue="0" itemLabel="TODOS"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="ACTIVO"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="INACTIVO"></f:selectItem>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <p:dataTable id="consulta" rows="10" var="user" value="#{rptUsuariosController.listDatos}" 
-                                 paginator="false"
+                                 paginator="false" emptyMessage="No hay usuarios que mostrar"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="10,20,40"
                                  reflow="true">
