correccion de gestionar alumnos

--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteAlumnos/index.xhtml
@@ -50,8 +50,8 @@
                 <p:dataTable id="consulta"  var="car" value="#{rptAlumnosController.listDatos}" 
                              paginator="false"
                              reflow="true">
-                    <p:column headerText="Alumno" >
-                        #{car.alumno}
+                    <p:column headerText="Carnet" >
+                        #{car.carnet}
                     </p:column>
                     <p:column headerText="Alumno" >
                         #{car.alumno}
