correcion de reporte

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/index.xhtml
@@ -49,7 +49,7 @@
                         #{car.maTurno}
                     </p:column>
                     <p:column headerText="Acciones">
-                        <p:commandLink action="#{gestionMateriasController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Materia" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionMateriasController.ver}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Materia" ></i></p:commandLink>
                         <p:commandLink action="#{gestionMateriasController.modificar(car)}" >
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Materia"></i>
                         </p:commandLink>
