--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteMatricula/index.xhtml
@@ -50,7 +50,7 @@
                         #{car.seccion}
                     </p:column>
                     <f:facet name="footer">
-                        Total de alumnos #{rptMatriculaController.totalTransacciones}
+                        Total de matriculas #{rptMatriculaController.totalTransacciones}
                     </f:facet>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
