--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/configurar.xhtml
@@ -210,7 +210,8 @@
                         </p:dataTable>
                     </p:tab>
                 </p:tabView>
-                <p:fieldset legend="Vista Previa" toggleable="true" collapsed="true">
+                <div class="EmptyBox20"></div>
+                <p:fieldset legend="Vista Previa" toggleable="true" collapsed="true" class="Container100">
                     <div class="EmptyBox20"></div>
                     <p:remoteCommand name="refrescarImagen" update="panel,efectos" oncomplete="configurarVideo()" onstart="loadScript()"></p:remoteCommand>
                     <p:panelGrid columns="2">
