--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/editar.xhtml
@@ -33,8 +33,8 @@
                     </p:selectOneMenu>                        
                     <p:outputLabel for="estado" value="Estado: " class="Responsive"></p:outputLabel>
                     <p:selectOneMenu id="estado" value="#{gestionComponentesInteractivosController.modifica.scEstado}" >
-                        <f:selectItem itemValue="N" itemLabel="No disponible"></f:selectItem>
-                        <f:selectItem itemValue="D" itemLabel="Disponible"></f:selectItem>
+                        <f:selectItem itemValue="A" itemLabel="Activo"></f:selectItem>
+                        <f:selectItem itemValue="T" itemLabel="Trabajando"></f:selectItem>
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
