--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/index.xhtml
@@ -27,7 +27,7 @@
                     <p:commandButton value="Si" action="#{gestionComponentesInteractivosController.eliminarArchivo()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
                     <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
                 </p:dialog>
-                <p:dataTable id="consulta" var="car" value="#{gestionComponentesInteractivosController.datosList}" rows="10"
+                <p:dataTable id="consulta" paginatorPosition="bottom" var="car" value="#{gestionComponentesInteractivosController.datosList}" rows="10"
                              paginator="true"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
