--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionMaterias/crear.xhtml
@@ -36,8 +36,8 @@
                 <p:panelGrid columns="2" class="Container50 Responsive">
                     <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu  id="estado" class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maEstado}">
-                        <f:selectItem itemValue ="DISPONIBLE" itemLabel="DISPONIBLE"/>
-                        <f:selectItem itemValue="NO DISPONIBLE" itemLabel="NO DISPONIBLE"/>
+                        <f:selectItem itemValue ="A" itemLabel="DISPONIBLE"/>
+                        <f:selectItem itemValue="N" itemLabel="NO DISPONIBLE"/>
                     </p:selectOneMenu>
                     <p:outputLabel value="Turno: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu class=" Responsive" value="#{gestionMateriasController.materiaNuevo.maTurno}">
